gcc/testsuite/rust/rustc/ui/error-codes/E0431.rs
use {self}; // { dg-error ".E0431." "" { target *-*-* } }

fn main () {
}

